styles.css
/* CSS Resets */
* {
    box-sizing: border-box;
}

img {
    max-width: 100%;
    display: block;
    height: auto;
}

a {
    text-decoration: none;
}

nav ol, nav ul {
    list-style-type: none;
    margin-left: 0;
    padding-left: 0;
}

/* Typography */
body {
    font-family: "Figtree", sans-serif;
}

h1 {
    font-weight: 700;
    font-size: 48px;
}

h2 {
    font-weight: 300;
    font-size: 28px;
    line-height: 1.1em;
}

h3 {
    font-weight: 400;
}

main section a {
    font-weight: 300;
    line-height: 1.1em;
}

main section h3 {
    font-size: 24px;
}

footer {
    font-size: 22px;
    font-style: italic;
}

#sweet {
    font-weight: 700;
    text-decoration: underline;
    transition: all 0.5s;
}

#spicy {
    font-weight: 300;
    text-decoration: none;
    transition: all 0.5s;
}

/* Color */
body {
    background-color: #FCAAB6;
    transition: all 2s;
}

#banner {
    background-color: #BF4440;
    transition: all 2s;
}

button {
    background-color: #751210;
    color: #EBEBEB;
    transition: all 1s;
}

#banner h1, #banner h2 {
    color: #EBEBEB;
    transition: all 2s;
}

main, footer {
    color: #222222;
    transition: all 2s;
}

main section {
    border: 1px #B83F3B solid;
    transition: all 2s;
}

button {
    border: 1px solid transparent;
    border-radius: 15px;
}

section h3, section a {
    color: #222222;
    transition: color 2s;
}

a:visited {
    color: inherit;
}

/* Images */
#sweet-image {
    width: 300px;
    height: 300px;
    background: url('images/lollipop.svg') no-repeat center/contain;

    position: absolute;
    z-index: 1;
    bottom: -150px;
    left: -150px;

    transition: all 1s;
}

#spicy-image {
    width: 175px;
    height: 175px;
    background: url('images/chili.svg') no-repeat center/contain;

    position: absolute;
    z-index: 1;
    bottom: -50px;
    left: -325px;

    transition: all 1s;
}

/* Layout and Positioning */
#container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#banner {
    display: flex;
    flex-direction: column;
    justify-content: center;

    position: relative;
}

#banner-head {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#banner h1 {
    text-align: center;
    margin: auto;
}

#banner-foot {
    display: flex;
    justify-content: end;
}

main {
    display: flex;
    justify-content: space-evenly;
    gap: 20px;
}

main section {
    flex: 1;
    position: relative;
}

main section a {
    display: inline-block;
}

footer {
    display: flex;
    justify-content: center;
}

/* Size, Padding, and Margins */
#container {
    width: 100%;
    height: 750px;

    min-width: 900px;
    max-width: 1366px;
}

header {
    margin: 0 auto 2em auto;
}

#banner {
    width: 1100px;
    height: 250px;

    padding: 20px 60px;
}

#banner h1 {
    padding: 5px 0px;
}

button {
    padding: 12px;
}

main {
    width: 1200px; 
    margin: 0 auto;
}

main section {
    margin: 0 .25em;
    padding: 1em 2em;
}

main section li {
    padding-left: 1.2em;
}

main section a {
    padding: .5em;
}

/* Interaction */
body {
    transition: all 2s;
}

button:hover {
    background-color: #855840;
    cursor: pointer;
}

section a:hover {
    background-color: #d5ca8f;
    color: #333;
    transition: background-color 1s, color 1s;
}

section.switch a:hover {
    background-color: #9d6a4f;
    color: rgb(235, 235, 235);
    transition: background-color 1s, color 1s;
}

button.switch:hover {
    background-color: #874650;
    color: rgb(235, 235, 235)
}

/* Flow Animation */

main section {
    overflow: hidden;
}

.filler {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 0px;
    background: url('images/sweet-gumdrops-filled.svg') no-repeat top center;
    background-size: 100% auto;
    opacity: 75%;

    pointer-events: none;
    transition: height 0.5s ease-in-out;
}

/* Switch */
#banner.switch {
    background-color: #F98E89;
    transition: all 2s;
}

#banner.switch h1, #banner.switch h2 {
    color: #222222;
    transition: all 2s;
}

button.switch {
    background-color: #FCAAB6;
    color: #252525;
    transition: background-color 1s, color 1s;
}

body.switch {
    background-color: #751210;
    color: #EBEBEB;
    transition: background-color 2s, color 2s;
}

main section.switch {
    border: 1px #F98E89 solid;
    transition: border 2s, background-color 1s, color 1s;
}

main section.switch h3, main section.switch a {
    color: #EBEBEB;
    transition: color 2s, background-color 1s, color 1s;
}

footer.switch p {
    color: #EBEBEB;
    transition: all 0.5s;
}

#sweet-image.switch {
    transform: translateX(-300px);
    transition: all 1s;
}

#spicy-image.switch {
    transform: translateX(250px);
    transition: all 1s;
}

#sweet.switch {
    font-weight: 300;
    text-decoration: none;
    transition: all 0.5s;
}

#spicy.switch {
    font-weight: 700;
    text-decoration: underline;
    transition: all 0.5s;
}

.filler.switch {
    background: url('images/spicy-chili-flakes-filled.svg') no-repeat top center;
    background-size: 100% auto;
    transition: background 2s, height 0.5s ease-in-out;
}

